// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should accept "style" prop and pass down to ModalContainer 1`] = `
.emotion-5 {
  position: fixed;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 100%;
  pointer-events: none;
  z-index: 1100;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 2rem;
}

.emotion-8 {
  overflow: hidden;
}

.emotion-7 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
  opacity: 1;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  float: right;
  margin-top: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-1 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  z-index: 1400;
  display: none;
}

.emotion-0 {
  border-radius: 2px;
  max-width: 1280px;
  background: #3A3A47;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: bold;
  line-height: 1.5;
  text-align: center;
  padding: 0.5rem;
}

.emotion-6 {
  position: fixed;
  z-index: 1050;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(211,212,221,0.7);
}

.emotion-4 {
  border: 1px solid #D3D4DD;
  box-shadow: 0 8px 10px -5px rgba(0,0,0,0.2),0 6px 30px 5px rgba(0,0,0,0.12),0 16px 24px 2px rgba(0,0,0,0.14);
  border-radius: 4px;
  background-color: #FFFFFF;
  min-width: 520px;
  pointer-events: auto;
  max-height: 80vh;
  overflow: auto;
  width: 900px;
  color: red;
}

<body
  class="emotion-8"
>
  <div />
  <div
    aria-hidden="true"
    class="emotion-1"
    id="tooltip-abc"
    role="tooltip"
  >
    <div
      class="emotion-0"
    >
      Close
    </div>
  </div>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-5"
    >
      <div
        aria-modal="true"
        class="emotion-4"
        role="dialog"
      >
        <button
          aria-describedby="tooltip-abc"
          aria-label="Close"
          class="emotion-3"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-2"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0z"
              />
            </svg>
          </span>
        </button>
        Testing.
      </div>
    </div>
    <div
      class="emotion-6"
      data-testid="backdrop"
    />
  </div>
</body>
`;

exports[`Modal should render correctly when closed 1`] = `
<body>
  <div />
</body>
`;

exports[`Modal should render correctly when opened 1`] = `
.emotion-5 {
  position: fixed;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 100%;
  pointer-events: none;
  z-index: 1100;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 2rem;
}

.emotion-8 {
  overflow: hidden;
}

.emotion-7 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
  opacity: 1;
}

.emotion-4 {
  border: 1px solid #D3D4DD;
  box-shadow: 0 8px 10px -5px rgba(0,0,0,0.2),0 6px 30px 5px rgba(0,0,0,0.12),0 16px 24px 2px rgba(0,0,0,0.14);
  border-radius: 4px;
  background-color: #FFFFFF;
  min-width: 520px;
  pointer-events: auto;
  max-height: 80vh;
  overflow: auto;
  width: 900px;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  float: right;
  margin-top: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-1 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  z-index: 1400;
  display: none;
}

.emotion-0 {
  border-radius: 2px;
  max-width: 1280px;
  background: #3A3A47;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: bold;
  line-height: 1.5;
  text-align: center;
  padding: 0.5rem;
}

.emotion-6 {
  position: fixed;
  z-index: 1050;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(211,212,221,0.7);
}

<body
  class="emotion-8"
>
  <div />
  <div
    aria-hidden="true"
    class="emotion-1"
    id="tooltip-abc"
    role="tooltip"
  >
    <div
      class="emotion-0"
    >
      Close
    </div>
  </div>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-5"
    >
      <div
        aria-modal="true"
        class="emotion-4"
        role="dialog"
      >
        <button
          aria-describedby="tooltip-abc"
          aria-label="Close"
          class="emotion-3"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-2"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0z"
              />
            </svg>
          </span>
        </button>
        Testing.
      </div>
    </div>
    <div
      class="emotion-6"
      data-testid="backdrop"
    />
  </div>
</body>
`;

exports[`Modal sizes should accept the "auto" size and render accordingly 1`] = `
.emotion-5 {
  position: fixed;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 100%;
  pointer-events: none;
  z-index: 1100;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 2rem;
}

.emotion-8 {
  overflow: hidden;
}

.emotion-7 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
  opacity: 1;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  float: right;
  margin-top: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-1 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  z-index: 1400;
  display: none;
}

.emotion-0 {
  border-radius: 2px;
  max-width: 1280px;
  background: #3A3A47;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: bold;
  line-height: 1.5;
  text-align: center;
  padding: 0.5rem;
}

.emotion-6 {
  position: fixed;
  z-index: 1050;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(211,212,221,0.7);
}

.emotion-4 {
  border: 1px solid #D3D4DD;
  box-shadow: 0 8px 10px -5px rgba(0,0,0,0.2),0 6px 30px 5px rgba(0,0,0,0.12),0 16px 24px 2px rgba(0,0,0,0.14);
  border-radius: 4px;
  background-color: #FFFFFF;
  min-width: 520px;
  pointer-events: auto;
  max-height: 80vh;
  overflow: auto;
  max-width: 100%;
}

<body
  class="emotion-8"
>
  <div />
  <div
    aria-hidden="true"
    class="emotion-1"
    id="tooltip-abc"
    role="tooltip"
  >
    <div
      class="emotion-0"
    >
      Close
    </div>
  </div>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-5"
    >
      <div
        aria-modal="true"
        class="emotion-4"
        role="dialog"
      >
        <button
          aria-describedby="tooltip-abc"
          aria-label="Close"
          class="emotion-3"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-2"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0z"
              />
            </svg>
          </span>
        </button>
        Testing.
      </div>
    </div>
    <div
      class="emotion-6"
      data-testid="backdrop"
    />
  </div>
</body>
`;

exports[`Modal sizes should accept the "large" size and render accordingly 1`] = `
.emotion-5 {
  position: fixed;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 100%;
  pointer-events: none;
  z-index: 1100;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 2rem;
}

.emotion-8 {
  overflow: hidden;
}

.emotion-7 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
  opacity: 1;
}

.emotion-4 {
  border: 1px solid #D3D4DD;
  box-shadow: 0 8px 10px -5px rgba(0,0,0,0.2),0 6px 30px 5px rgba(0,0,0,0.12),0 16px 24px 2px rgba(0,0,0,0.14);
  border-radius: 4px;
  background-color: #FFFFFF;
  min-width: 520px;
  pointer-events: auto;
  max-height: 80vh;
  overflow: auto;
  width: 900px;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  float: right;
  margin-top: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-1 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  z-index: 1400;
  display: none;
}

.emotion-0 {
  border-radius: 2px;
  max-width: 1280px;
  background: #3A3A47;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: bold;
  line-height: 1.5;
  text-align: center;
  padding: 0.5rem;
}

.emotion-6 {
  position: fixed;
  z-index: 1050;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(211,212,221,0.7);
}

<body
  class="emotion-8"
>
  <div />
  <div
    aria-hidden="true"
    class="emotion-1"
    id="tooltip-abc"
    role="tooltip"
  >
    <div
      class="emotion-0"
    >
      Close
    </div>
  </div>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-5"
    >
      <div
        aria-modal="true"
        class="emotion-4"
        role="dialog"
      >
        <button
          aria-describedby="tooltip-abc"
          aria-label="Close"
          class="emotion-3"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-2"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0z"
              />
            </svg>
          </span>
        </button>
        Testing.
      </div>
    </div>
    <div
      class="emotion-6"
      data-testid="backdrop"
    />
  </div>
</body>
`;

exports[`Modal sizes should accept the "small" size and render accordingly 1`] = `
.emotion-5 {
  position: fixed;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 100%;
  pointer-events: none;
  z-index: 1100;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 2rem;
}

.emotion-8 {
  overflow: hidden;
}

.emotion-7 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
  opacity: 1;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  float: right;
  margin-top: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-1 {
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  z-index: 1400;
  display: none;
}

.emotion-0 {
  border-radius: 2px;
  max-width: 1280px;
  background: #3A3A47;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: bold;
  line-height: 1.5;
  text-align: center;
  padding: 0.5rem;
}

.emotion-6 {
  position: fixed;
  z-index: 1050;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(211,212,221,0.7);
}

.emotion-4 {
  border: 1px solid #D3D4DD;
  box-shadow: 0 8px 10px -5px rgba(0,0,0,0.2),0 6px 30px 5px rgba(0,0,0,0.12),0 16px 24px 2px rgba(0,0,0,0.14);
  border-radius: 4px;
  background-color: #FFFFFF;
  min-width: 520px;
  pointer-events: auto;
  max-height: 80vh;
  overflow: auto;
  width: 520px;
}

<body
  class="emotion-8"
>
  <div />
  <div
    aria-hidden="true"
    class="emotion-1"
    id="tooltip-abc"
    role="tooltip"
  >
    <div
      class="emotion-0"
    >
      Close
    </div>
  </div>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-5"
    >
      <div
        aria-modal="true"
        class="emotion-4"
        role="dialog"
      >
        <button
          aria-describedby="tooltip-abc"
          aria-label="Close"
          class="emotion-3"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-2"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0z"
              />
            </svg>
          </span>
        </button>
        Testing.
      </div>
    </div>
    <div
      class="emotion-6"
      data-testid="backdrop"
    />
  </div>
</body>
`;
